// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages service should render correctly when data source is bods 1`] = `
<Component
  description="Service selection page of the Create Fares Data Service"
  errors={Array []}
  title="Service - Create Fares Data Service"
>
  <CsrfForm
    action="/api/service"
    csrfToken=""
    method="post"
  >
    <label
      htmlFor="service"
    >
      <h1
        className="govuk-heading-l"
        id="service-page-heading"
      >
        Select a service
      </h1>
    </label>
    <span
      className="govuk-hint"
      id="service-operator-passenger-type-hint"
    >
      Connexions Buses
       - 
      Adult
    </span>
    <ErrorSummary
      errors={Array []}
    />
    <div
      className="govuk-form-group "
    >
      <FormElementWrapper
        errorClass="govuk-select--error"
        errorId="service"
        errors={Array []}
      >
        <select
          className="govuk-select"
          defaultValue=""
          id="service"
          name="service"
        >
          <option
            disabled={true}
            value=""
          >
            Select One
          </option>
          <option
            className="service-option"
            key="123#05/02/2020"
            value="123#05/02/2020"
          >
            123 Manchester - Leeds (Start date 05/02/2020)
          </option>
          <option
            className="service-option"
            key="X1#06/02/2020"
            value="X1#06/02/2020"
          >
            X1 Edinburgh - N/A (Start date 06/02/2020)
          </option>
          <option
            className="service-option"
            key="Infinity Line#07/02/2020"
            value="Infinity Line#07/02/2020"
          >
            Infinity Line N/A - London (Start date 07/02/2020)
          </option>
        </select>
      </FormElementWrapper>
      <span
        className="govuk-hint hint-text"
        id="traveline-hint"
      >
        This data is taken from the
         
        <b>
          Bus Open Data Service (BODS)
        </b>
        . If the service you are looking for is not listed, contact the BODS help desk for advice
         
        <a
          href="/contact"
        >
          here
        </a>
      </span>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
  <SwitchDataSource
    csrfToken=""
    dataSourceAttribute={
      Object {
        "hasBods": true,
        "hasTnds": true,
        "source": "bods",
      }
    }
    pageUrl="/service"
  />
</Component>
`;

exports[`pages service should render correctly when data source is tnds 1`] = `
<Component
  description="Service selection page of the Create Fares Data Service"
  errors={Array []}
  title="Service - Create Fares Data Service"
>
  <CsrfForm
    action="/api/service"
    csrfToken=""
    method="post"
  >
    <label
      htmlFor="service"
    >
      <h1
        className="govuk-heading-l"
        id="service-page-heading"
      >
        Select a service
      </h1>
    </label>
    <span
      className="govuk-hint"
      id="service-operator-passenger-type-hint"
    >
      Connexions Buses
       - 
      Adult
    </span>
    <ErrorSummary
      errors={Array []}
    />
    <div
      className="govuk-form-group "
    >
      <FormElementWrapper
        errorClass="govuk-select--error"
        errorId="service"
        errors={Array []}
      >
        <select
          className="govuk-select"
          defaultValue=""
          id="service"
          name="service"
        >
          <option
            disabled={true}
            value=""
          >
            Select One
          </option>
          <option
            className="service-option"
            key="123#05/02/2020"
            value="123#05/02/2020"
          >
            123 - Start date 05/02/2020
          </option>
          <option
            className="service-option"
            key="X1#06/02/2020"
            value="X1#06/02/2020"
          >
            X1 - Start date 06/02/2020
          </option>
          <option
            className="service-option"
            key="Infinity Line#07/02/2020"
            value="Infinity Line#07/02/2020"
          >
            Infinity Line - Start date 07/02/2020
          </option>
        </select>
      </FormElementWrapper>
      <span
        className="govuk-hint hint-text"
        id="traveline-hint"
      >
        This data is taken from the
         
        <b>
          Traveline National Dataset (TNDS)
        </b>
        . If the service you are looking for is not listed, contact the BODS help desk for advice
         
        <a
          href="/contact"
        >
          here
        </a>
      </span>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
  <SwitchDataSource
    csrfToken=""
    dataSourceAttribute={
      Object {
        "hasBods": false,
        "hasTnds": true,
        "source": "tnds",
      }
    }
    pageUrl="/service"
  />
</Component>
`;
